Fix payment method elements and modals being too large

--- a/src/components/Payments/PayWithCash.css
+++ b/src/components/Payments/PayWithCash.css
@@ -2,36 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .cash__heading {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .cash-caveat {
     font-size: 1.5rem;
-    margin-bottom: 35px;
-}
-
-
-.accept-terms__div {
-    display: flex;
-    align-items: center;
-    gap: 3px;
     margin-bottom: 30px;
 }
-
-.accept-terms__label {
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-.accept-terms__checkbox {
-    width: 50px;
-    height: 25px;
-}
-
 .cash__list>*{
     margin-bottom: 5px;
 }
@@ -43,3 +24,21 @@
     border-bottom: 1px solid #b2b2b2;
     font-weight: 500;
 }
+
+.accept-terms__div {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    margin-bottom: 30px;
+}
+
+.accept-terms__label {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.accept-terms__checkbox {
+    width: 50px;
+    height: 25px;
+}
+
